tests/baselines/reference/exportAssignDottedName.errors.txt
tests/cases/conformance/externalModules/foo1.ts(1,1): error TS1148: Cannot compile external modules unless the '--module' flag is provided.
tests/cases/conformance/externalModules/foo2.ts(2,14): error TS1005: ';' expected.
tests/cases/conformance/externalModules/foo2.ts(2,15): error TS2304: Cannot find name 'x'.


==== tests/cases/conformance/externalModules/foo2.ts (2 errors) ====
    import foo1 = require('./foo1');
    export = foo1.x; // Error, export assignment must be identifier only
                 ~
!!! error TS1005: ';' expected.
                  ~
!!! error TS2304: Cannot find name 'x'.
    
==== tests/cases/conformance/externalModules/foo1.ts (1 errors) ====
    export function x(){
    ~~~~~~~~~~~~~~~~~~~~
    	return true;
    ~~~~~~~~~~~~~
    }
    ~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    